# IMproject

./: .gitignore  app.py  config.py  requirements.in  requirements.txt  setup.cfg
routes/: api.py  audio.py  audio_query.py  auth.py  create_controller.py  create_like.py  generate_query.py  play_tab.py  playlist_detail_guest.py  playlist_detail_member.py  playlist_guest.py  playlist_query.py  routes.py
static/css/: PlayList.css  create.css  styles.css  theme.css
static/js/: api.js  audioUtils.js  auth.js  generate_api.js  like_api.js  main.js  member_api.js  music_api.js  music_constants.js  types.js
templates/: create_end.html  create_guest.html  create_like.html  create_member.html  home.html  index.html  layout.html
templates/components/: create_controller.html  create_form.html  create_image.html  create_like.html  google_login_button.html  loading.html  play_list_detail_guest.html  play_list_detail_member.html  play_list_guest.html  play_tab.html  process_button.html  progress_bar.html
