[metadata]
name = croffle
version = 0.0.0
description = AI Music Generation Project
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT

[options]
packages = find:
python_requires = >=3.8
install_requires =
    Flask>=2.3.0
    Flask-Cors>=4.0.0
    Flask-SQLAlchemy>=3.0.0
    Flask-Login>=0.6.0
    oauthlib>=3.2.0
    requests-oauthlib>=1.3.0
    PyJWT>=2.6.0
    python-dotenv>=1.0.0
    Pillow>=10.0.0

[options.extras_require]
dev =
    pytest>=7.0.0
    flake8>=6.0.0
    black>=23.0.0

[options.packages.find]
exclude =
    tests
    tests.*

[flake8]
max-line-length = 100
exclude = .git,__pycache__,venv,env,.venv
ignore = E203, W503

[isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True

[mypy]
python_version = 3.8
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
strict_optional = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_ignores = True